--- a/index.html
+++ b/index.html
@@ -3,53 +3,73 @@
 
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Alta de Menú</title>
   </head>
 
   <body>
-    <h1>Alta de Menú</h1>
+    <div class="container">
+      <div class="abs-center">
+        <!-- Inicio del formulario-->
+        <form class="formularioMenu" action="index.html" method="post">
+          <h1>Alta de Menú</h1><br>
+          <div class="form-group">
+            <!-- para el ingreso del codigo de menú -->
+            <label for="inCodMenu">Código de menú: </label>
+            <input type="text" name="inCodMenu" value="">
+          </div>
+            <br><br>
 
-    <!-- Inicio del formulario-->
-    <form class="" action="index.html" method="post">
+          <div class="form-group">
+            <!-- Para el ingreso del nombre del menú -->
+            <label for="txtNomMenu">Nombre del menú: </label>
+            <input type="text" name="txtNomMenu" value="">
+          </div>
 
-      <!-- para el ingreso del codigo de menú -->
-      <label for="inCodMenu">Código de menú: </label>
-      <input type="text" name="inCodMenu" value="">
-      <br><br>
+          <br><br>
 
-      <!-- Para el ingreso del nombre del menú -->
-      <label for="txtNomMenu">Nombre del menú: </label>
-      <input type="text" name="txtNomMenu" value="">
-      <br><br>
-      <label for="selectCeliaco">Apto para celíacos: </label>
+          <div class="form-group">
+          <!-- Combobox para seleccionar si es apto para celíacos o no -->
+            <label for="selectCeliaco">Apto para celíacos: </label>
+            <select name="selectCeliaco">
+              <option value="valor1" selected>-</option>
+              <option value="valor2">Sí</option>
+              <option value="valor3">No</option>
+            </select>
+          <div>
+          <br><br>
 
-      <!-- Combobox para seleccionar si es apto para celíacos o no -->
-      <select name="selectCeliaco">
-        <option value="valor1" selected>-</option>
-        <option value="valor2">Sí</option>
-        <option value="valor3">No</option>
-      </select>
-      <br><br>
 
-      <!-- Combobox para seleccionar si es apto para  vegetarianos o no  -->
-      <label for="selectVeget">Apto para vegetarianos: </label>
-      <select name="selectVeget">
-        <option value="valor1" selected>-</option>
-        <option value="valor2">Sí</option>
-        <option value="valor3">No</option>
-      </select>
-      <br><br>
+          <div class="form-group">
+            <!-- Combobox para seleccionar si es apto para  vegetarianos o no  -->
+            <label for="selectVeget">Apto para vegetarianos: </label>
+            <select name="selectVeget">
+              <option value="valor1" selected>-</option>
+              <option value="valor2">Sí</option>
+              <option value="valor3">No</option>
+            </select>
+          </div>
+          <br><br>
 
-      <!-- Label para el ingreso del precio-->
-      <label for="txtPrecio">Precio: </label>
-      <input type="text" name="txtPrecio" value="">
-      <br><br>
+          <div class="form-group">
+            <!-- Label para el ingreso del precio-->
+            <label for="txtPrecio">Precio: </label>
+            <input type="text" name="txtPrecio" value="">
+          </div>
+          <br><br>
 
-      <!-- Text area para ingresar la descripción del producto-->
-      <label for="txtDescripcion">Descripción: </label>
-      <textarea name="name" rows="8" cols="80"></textarea>
-      <br><br>
-    </form>
+          <div class="form-group">
+            <!-- Text area para ingresar la descripción del producto-->
+            <label for="txtDescripcion">Descripción: </label>
+            <textarea name="name" rows="8" cols="80"></textarea>
+          </div>
+          <br><br>
+          <div class="form-group">
+            <input type="button" name="btnLimpiar" value="Limpiar">
+            <input type="button" name="btnGuardar" value="Guardar">
+          </div>
+
+        </form>
 
   </body>
 </html>
