--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           </div>
           <br><br>
           <div class="form-group">
+            <!-- Botones para limpiar el formulario y para guardar los cambios-->
             <input type="button" name="btnLimpiar" value="Limpiar">
             <input type="button" name="btnGuardar" value="Guardar">
           </div>
