--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       <div class="abs-center">
         <!-- Inicio del formulario-->
         <form class="formularioMenu" action="index.html" method="post">
+          <p class="centrado">
+            <img src="images/menuok.png" alt="Menúes">
+          </p>
           <h1>Alta de Menú</h1><br>
           <div class="form-group">
             <!-- para el ingreso del codigo de menú -->
