finalizando el diseño

--- a/index.html
+++ b/index.html
@@ -12,66 +12,72 @@
       <div class="abs-center">
         <!-- Inicio del formulario-->
         <form class="formularioMenu" action="index.html" method="post">
+
           <p class="centrado">
             <img src="images/menuok.png" alt="Menúes">
+            <h1>Alta de Menú</h1><br>
           </p>
-          <h1>Alta de Menú</h1><br>
-          <div class="form-group">
-            <!-- para el ingreso del codigo de menú -->
-            <label for="inCodMenu">Código de menú: </label>
-            <input type="text" name="inCodMenu" value="">
-          </div>
-            <br><br>
+          <p class="formulariocompleto">
 
-          <div class="form-group">
-            <!-- Para el ingreso del nombre del menú -->
-            <label for="txtNomMenu">Nombre del menú: </label>
-            <input type="text" name="txtNomMenu" value="">
-          </div>
+              <img src="images/mozoconplatok.png"  width="175" align= "right" alt="mozoconplato">
 
-          <br><br>
+              <div class="form-group">
+                <!-- para el ingreso del codigo de menú -->
+                <label for="inCodMenu">Código de menú: </label>
+                <input type="text" name="inCodMenu" value="">
+              </div>
+                <br><br>
 
-          <div class="form-group">
-          <!-- Combobox para seleccionar si es apto para celíacos o no -->
-            <label for="selectCeliaco">Apto para celíacos: </label>
-            <select name="selectCeliaco">
-              <option value="valor1" selected>-</option>
-              <option value="valor2">Sí</option>
-              <option value="valor3">No</option>
-            </select>
-          <div>
-          <br><br>
+              <div class="form-group">
+                <!-- Para el ingreso del nombre del menú -->
+                <label for="txtNomMenu">Nombre del menú: </label>
+                <input type="text" name="txtNomMenu" value="">
+              </div>
+
+              <br><br>
+
+              <div class="form-group">
+              <!-- Combobox para seleccionar si es apto para celíacos o no -->
+                <label for="selectCeliaco">Apto para celíacos: </label>
+                <select name="selectCeliaco">
+                  <option value="valor1" selected>-</option>
+                  <option value="valor2">Sí</option>
+                  <option value="valor3">No</option>
+                </select>
+              <div>
+              <br><br>
 
 
-          <div class="form-group">
-            <!-- Combobox para seleccionar si es apto para  vegetarianos o no  -->
-            <label for="selectVeget">Apto para vegetarianos: </label>
-            <select name="selectVeget">
-              <option value="valor1" selected>-</option>
-              <option value="valor2">Sí</option>
-              <option value="valor3">No</option>
-            </select>
-          </div>
-          <br><br>
+              <div class="form-group">
+                <!-- Combobox para seleccionar si es apto para  vegetarianos o no  -->
+                <label for="selectVeget">Apto para vegetarianos: </label>
+                <select name="selectVeget">
+                  <option value="valor1" selected>-</option>
+                  <option value="valor2">Sí</option>
+                  <option value="valor3">No</option>
+                </select>
+              </div>
+              <br><br>
 
-          <div class="form-group">
-            <!-- Label para el ingreso del precio-->
-            <label for="txtPrecio">Precio: </label>
-            <input type="text" name="txtPrecio" value="">
-          </div>
-          <br><br>
+              <div class="form-group">
+                <!-- Label para el ingreso del precio-->
+                <label for="txtPrecio">Precio: </label>
+                <input type="text" name="txtPrecio" value="">
+              </div>
+              <br><br>
 
-          <div class="form-group">
-            <!-- Text area para ingresar la descripción del producto-->
-            <label for="txtDescripcion">Descripción: </label>
-            <textarea name="name" rows="8" cols="80"></textarea>
-          </div>
-          <br><br>
-          <div class="form-group">
-            <!-- Botones para limpiar el formulario y para guardar los cambios-->
-            <input type="button" name="btnLimpiar" value="Limpiar">
-            <input type="button" name="btnGuardar" value="Guardar">
-          </div>
+              <div class="form-group">
+                <!-- Text area para ingresar la descripción del producto-->
+                <label for="txtDescripcion">Descripción: </label>
+                <textarea name="name" rows="8" cols="80"></textarea>
+              </div>
+              <br><br>
+              <div class="form-group">
+                <!-- Botones para limpiar el formulario y para guardar los cambios-->
+                <input type="button" name="btnLimpiar" value="Limpiar">
+                <input type="button" name="btnGuardar" value="Guardar">
+              </div>
+            </p>
 
         </form>
 
