--- a/ej3ptoa.html
+++ b/ej3ptoa.html
@@ -46,7 +46,7 @@ TENER EN CUENTA: cuando se asigna un dato ingresado por prompt a una variable, e
            <div class="form-group">
              <p id="resul">
                <label for="resultado">Resultado: </label>
-               <input type="text" name="resultado" id="resultado" value="0">
+               <input type="text" name="resultado" id="resultado" value="0" disabled>
             </p>
             </div>
            <br><br>
