--- a/Ej3-2b.html
+++ b/Ej3-2b.html
@@ -2,25 +2,43 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
-
+    <link rel="stylesheet" href="css/style.css">
     <title>Ejercicio 3 Punto 2</title>
   </head>
   <body>
-
-    <p>
-      b. Realizar una aplicación que consulte a un usuario mediante una ventana “confirm” si está de
-      acuerdo con salir de la página donde se encuentra actualmente. Si el usuario acepta, debe aparecer
-       un mensaje mediante una alerta que le informe que será redirigido. En caso que cancele, deberá
-       notificarle que permanecerá en la web que se encuentra actualmente.  </p>
+    <br>
+    <div class="enunciado" id="enunciado">
+      <h1>Enunciado</h1>
+      <br>
+      <p>
+        b. Realizar una aplicación que consulte a un usuario mediante una ventana “confirm” si está de
+        acuerdo con salir de la página donde se encuentra actualmente. Si el usuario acepta, debe aparecer
+        un mensaje mediante una alerta que le informe que será redirigido. En caso que cancele, deberá
+        notificarle que permanecerá en la web que se encuentra actualmente.
+      </p>
+      <br>
+      <p>
+        c. Realizar una aplicación que permita ingresar “n” cantidad de nombres de equipos de futbol
+        mediante una ventana prompt. Cuando desee terminar de ingresar equipos deberá ingresar
+        la palabra “terminado”. Al finalizar el ingreso, deberá informar por pantalla mediante la
+        consola la cantidad total de equipos que fueron ingresados.
+      <br><br><br>
+      </p>
+    </div>
 
       <script type="text/javascript">
-        let resul = confirm('Desea salir de la página?');
-        console.log(resul);
-        if(resul == true){
-          alert('Vas a ser redireccionado');
-        }else{
-          alert('Vas a permanecer en la página');
-        }
+        //Punto a:
+        //let resul = confirm('Desea salir de la página?');
+        //console.log(resul);
+        //if(resul == true){
+        //  alert('Vas a ser redireccionado');
+        //}else{
+        //  alert('Vas a permanecer en la página');
+        //}
+
+        //Punto b:
+        
+
       </script>
 
   </body>
